<resources>
    <string-array name="categorias">
        <item>Seleccione una categoría</item>
        <item>cliente</item>
        <item>produccion</item>
    </string-array>

    <string name="app_name">Macadamia Application</string>
    <string name="mainPantalla">Main Screen</string>
    <string name="btn_order">Order Now</string>
    <string name="description_logo">App Logo</string>
    <string name="white_wallpaper">White Background with Design</string>
    <string name="yourcookieday">Your Cookie Day Image</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="google">Connect with Google</string>
    <string name="ups">This button is not configured</string>

    <string name="create_account">Create Account</string>
    <string name="user">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="adress">Address</string>
    <string name="categories">Categories</string>
    <string name="signin">Sign In</string>
    <string name="noaccount">Dont have an account?</string>

    <string name="cookies">Cookies</string>
    <string name="menu">Menu</string>
    <string name="store">Tienda</string>
    <string name="cookie">Galletas</string>
    <string name="cake">Tortas</string>
    <string name="chessecake">Chessecakes</string>
    <string name="produccion">PRODUCCION</string>
    <string name="producci_n">Producción</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="states">Estados</string>
    <string name="orders">Pedidos</string>
    <string name="add">Agregar</string>
    <string name="earnings">Ganancias</string>

    <string name="profile">Profile</string>
    <string name="myorders">My Orders</string>
    <string name="profileU">User</string>
    <string name="shoppingCart">Carrito</string>
    <string name="home">Casa</string>

    <!-- galletas -->
    <string name="price16">16 bs</string>
    <string name="price18">18 bs</string>
    <string name="price20">20 bs</string>

    <!-- tortas -->
    <string name="tortaChocolate">15p/280bs  25p/440bs</string>
    <string name="tortaZanahoria">15p/270bs  25p/430bs</string>
    <string name="tortaChocoMouse">15p/270bs  25p/430bs</string>
    <string name="tortaLemonBerry">15p/270bs  25p/440bs</string>
    <string name="tortaBirthdayCake">15p/270bs  25p/440bs</string>
    <string name="tortaRedVelvet">15p/280bs  25p/450bs</string>
    <string name="tortaCookieDough">15p/270bs  25p/440bs</string>
    <string name="tortaOreo">15p/270bs  25p/440bs</string>
    <string name="PieBanoffe">20p/180bs</string>
    <string name="PieChocolate">20p/320bs</string>
    <!-- cheesecakes -->

    <string name="cheeseChocolateTru">16p/310bs</string>
    <string name="cheeseFR">16p/350bs</string>
    <string name="cheeseManjar">16p/310bs</string>
    <string name="cheeseCC">16p/310bs</string>
    <string name="cheeseCookie">16p/310bs</string>
    <string name="cheeseLemon">16p/310bs</string>
    <string name="cheesePie">16p/310bs</string>
    <string name="cheeseNutella">16p/350bs</string>
    <string name="cheeseBerry">16p/350bs</string>
    <string name="cheeseChocolate">16p/350bs</string>
    <string name="cheeseOreo">16p/350bs</string>
    <string name="cheeseApple">16p/310bs</string>
    <string name="cheeseBombon">16p/380bs</string>

    <!-- nombres productos -->
    <string name="chocochips"> Galleta Tradicional Chocochips</string>
    <string name="duo">Galleta Tradicional Duo</string>
    <string name="rv">Galleta Tradicional Red velvet</string>
    <string name="cac">Galleta Tradicional Cookies and Cream</string>
    <string name="cinaroll">Galleta Tradicional Cinaroll</string>
    <string name="fruity">Galleta Tradicional Fruity Pebbles</string>
    <string name="lemon">Galleta Rellena Lemon Pie</string>
    <string name="brookie">Galleta Rellena Brookie</string>
    <string name="zanahoria">Galleta Rellena Zanahoria</string>
    <string name="ddl">Galleta Rellena Dulce de leche</string>
    <string name="nutella">Galleta Rellena Nutella</string>
    <string name="ferrero">Galleta Rellena Ferrero</string>
    <string name="tradis">16.00bs</string>
    <string name="rellenas">18.00bs</string>

    <string name="chocolateTrufado"> Cheesecake Chocolate trufado </string>
    <string name="frutosRojos">Cheesecake Frutos Rojos</string>
    <string name="manjar">Cheesecake Manjar</string>
    <string name="carrotCake">Cheesecake Carrot Cake</string>
    <string name="cookieDough">Cheesecake Cookie Dough</string>
    <string name="nutellaCheese">Cheesecake Nutella</string>

    <string name="shopping">Shooping Cart</string>
    <string name="confirm">Confirm Order                 0bs</string>
    <string name="productos">Products</string>
    <string name="disponible">Available Cookies</string>


    <string name="chocolate"> Torta Chocolate Trufado </string>
    <string name="caramelCarrot">Torta Caramel Carrot</string>
    <string name="chocomouse">Torta ChocoMousse</string>
    <string name="lemonBerry">Torta Lemon Berry</string>
    <string name="birthday">Torta Birthday Cake</string>
    <string name="redvelt">Torta Red Velvet</string>
    <string name="cokieodugh">Torta Cookie Dough</string>
    <string name="oreo">Torta Oreo</string>
    <string name="banoffe">Banoffe Pie</string>
    <string name="piechoco">Chocolate Pie</string>

    <string name="anticipacion">PEDIDOS DE CATÁLOGO SON</string>
    <string name="anticipacion2">CON 48H DE ANTICIPACIÓN</string>

    <string name="product_image">Imagen del producto</string>
    <string name="delete">Eliminar producto</string>
    <string name="precio_total">%1$d bs</string>
    <string name="confirmar_con_precio">Confirm Order    %1$s</string>

    <string name="estados">Order Status</string>
    <string name="ok">Aceppt</string>
    <string name="no">Decline</string>
    <string name="view">View</string>
    <string name="aceppted">Order Aceppted</string>


</resources>