<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CookieCatFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="600dp">
                <ImageView
                    android:id="@+id/cheesePortada"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cheesecake_portada" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anticipacion"
                    android:layout_marginTop="160dp"
                    android:textColor="@color/dark_green"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anticipacion2"
                    android:layout_marginTop="180dp"
                    android:textColor="@color/dark_green"/>
            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">


                <ImageView
                    android:id="@+id/cheesecake1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cheesecake1" />

                <Button
                    android:id="@+id/chocolateTrufado"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="260dp"
                    android:layout_marginTop="225dp"
                    android:text="@string/cheeseChocolateTru"/>

                <Button
                    android:id="@+id/frutosRojos"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="538dp"
                    android:text="@string/cheeseFR" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/cheesecake2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cheesecake2" />

                <Button
                    android:id="@+id/manjar"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="262dp"
                    android:layout_marginTop="216dp"
                    android:text="@string/cheeseManjar" />

                <Button
                    android:id="@+id/carrotCake"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="528dp"
                    android:text="@string/cheeseCC" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/cheesecake3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cheesecake3" />

                <Button
                    android:id="@+id/cookiedough"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="260dp"
                    android:layout_marginTop="228dp"
                    android:text="@string/cheeseCookie" />

                <Button
                    android:id="@+id/cheesecakenutella"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="531dp"
                    android:text="@string/cheeseNutella" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/cheesecake4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cheesecake4" />

                <Button
                    android:id="@+id/lemonPie"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="260dp"
                    android:layout_marginTop="224dp"
                    android:text="@string/cheesePie" />

                <Button
                    android:id="@+id/lemonBerry"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="536dp"
                    android:text="@string/cheeseLemon" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/cheesecake5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cheesecake5" />

                <Button
                    android:id="@+id/chessecakeChocolate"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="258dp"
                    android:layout_marginTop="230dp"
                    android:text="@string/cheeseChocolate" />

                <Button
                    android:id="@+id/oreo"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="533dp"
                    android:text="@string/cheeseOreo" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/cheesecake6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cheesecake6" />

                <Button
                    android:id="@+id/appleCrumble"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="258dp"
                    android:layout_marginTop="230dp"
                    android:text="@string/cheeseApple" />

                <Button
                    android:id="@+id/bombom"
                    style="@style/bottonPrice"
                    android:layout_width="110dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="539dp"
                    android:text="@string/cheeseBombon" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
