<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/cookies"
            android:scaleType="centerCrop"
            android:src="@drawable/cookies" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/menu"
            android:textColor="@color/dark_green"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_green" />

        <Button
            android:id="@+id/StoreButton"
            style="@style/LightGreenButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/store"
            app:icon="@drawable/menu"
            app:iconPadding="30dp"
            app:iconSize="60dp"
            app:iconTintMode="multiply" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_green" />


        <Button
            android:id="@+id/CookieButton"
            style="@style/LightGreenButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start"
            android:paddingStart="29dp"
            android:paddingEnd="29dp"
            android:text="@string/cookie"
            app:icon="@drawable/cookie"
            app:iconPadding="35dp"
            app:iconSize="50dp"
            app:iconTintMode="multiply" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_green" />

        <Button
            android:id="@+id/CakeButton"
            style="@style/LightGreenButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start"
            android:paddingStart="33dp"
            android:paddingEnd="33dp"
            android:text="@string/cake"
            app:icon="@drawable/tortas"
            app:iconPadding="43dp"
            app:iconSize="38dp"
            app:iconTintMode="multiply" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_green" />

        <Button
            android:id="@+id/ChesseButton"
            style="@style/LightGreenButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/chessecake"
            app:icon="@drawable/chessecake"
            app:iconPadding="45dp"
            app:iconSize="36dp"
            app:iconTintMode="multiply" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_green" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        android:background="@drawable/views" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <ImageButton

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:contentDescription="@string/home"
            android:scaleType="fitCenter"
            android:src="@drawable/casita" />

        <ImageButton
            android:id="@+id/carrito"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:contentDescription="@string/shoppingCart"
            android:scaleType="fitCenter"
            android:src="@drawable/carrito" />

        <ImageButton
            android:id="@+id/userProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:contentDescription="@string/profileU"
            android:scaleType="fitCenter"
            android:src="@drawable/persona" />

    </LinearLayout>


</FrameLayout>

