<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CookieCatFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/tortaPortada"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tortas_portada" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:text="@string/anticipacion"
                    android:textColor="@color/dark_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="180dp"
                    android:text="@string/anticipacion2"
                    android:textColor="@color/dark_green" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">


                <ImageView
                    android:id="@+id/torta1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tortas1" />

                <Button
                    android:id="@+id/tortaChocolate"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="220dp"
                    android:text="@string/tortaChocolate" />

                <Button
                    android:id="@+id/TortacaramelCarrotCake"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="530dp"
                    android:text="@string/tortaZanahoria" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/tortas2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tortas2" />


                <Button
                    android:id="@+id/tortaChocoMousse"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="230dp"
                    android:layout_marginTop="220dp"
                    android:text="@string/tortaChocoMouse" />

                <Button
                    android:id="@+id/TortaLemonBerry"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="530dp"
                    android:text="@string/tortaLemonBerry" />


            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/tortas3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tortas3" />

                <Button
                    android:id="@+id/tortaBirthdayCake"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="225dp"
                    android:layout_marginTop="218dp"
                    android:text="@string/tortaBirthdayCake" />

                <Button
                    android:id="@+id/TortaRedVelvet"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="530dp"
                    android:text="@string/tortaRedVelvet" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/tortas4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tortas4" />

                <Button
                    android:id="@+id/tortaCookieDough"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="226dp"
                    android:layout_marginTop="215dp"
                    android:text="@string/tortaCookieDough" />

                <Button
                    android:id="@+id/TortaOreo"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="540dp"
                    android:text="@string/tortaOreo" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="600dp">

                <ImageView
                    android:id="@+id/tortas5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tortas5" />

                <Button
                    android:id="@+id/BanoffePie"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="220dp"
                    android:layout_marginTop="216dp"
                    android:text="@string/PieBanoffe" />

                <Button
                    android:id="@+id/ChocolatePie"
                    style="@style/bottonPrice"
                    android:layout_width="180dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="513dp"
                    android:text="@string/piechoco" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
