<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgProductoEstado"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            android:src="@drawable/torta_zanahoria"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Rounded" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caramelCarrot"
                android:textColor="#2e4c2f"
                android:textSize="16sp"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnVIEW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view" />


                <Button
                    android:id="@+id/btnOk"
                    style="@style/AceptButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/ok" />

                <Button
                    android:id="@+id/btnNo"
                    style="@style/RedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/no" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
